# lexidrift

./: .gitignore  .infisical.json  DEV_NOTES.md  README.md
.github/workflows/: deploy-api.yml  deploy-app.yml  deploy-imagify.yml  test-imagify.yml
api/: Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vitest.config.ts
api/prisma/: schema.prisma
api/src/: config.ts  db.ts  fastify.ts  index.ts  router.ts
api/test/: queue.e2e.spec.ts  retrievability.e2e.spec.ts  version.e2e.spec.ts
app/: .gitignore  Dockerfile  Makefile  README.md  app.vue  docker-compose.yml  global.d.ts  nuxt.config.ts  package.json  pnpm-lock.yaml
app/components/: ModalFrame.vue  WordsListHelloWorld.vue
app/composables/: modal.ts
app/helpers/: buildQueryToMarkText.ts
app/layouts/: default.vue
app/pages/: contact.vue  debug-table.vue  debug.vue  index.vue  knowledge.vue  media.vue  (+3 more)
data/: Makefile  README.md  de-raw.txt  definition.caller.ts  es-raw.txt  fix-wiki-freq.py  get-lists.sh  load-def-styles.js  load-word-to-db.ts  mongo-migrate.ts  package.json  pnpm-lock.yaml  tasks.md
id/: README.md  discovery.xcf  logo.xcf
imagify/: Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
landing/: README.md  package.json  pnpm-lock.yaml
lexify/: Dockerfile  Makefile  README.md  docker-compose.yml  llm-cache.db  llm-cache.sql  package.json  pnpm-lock.yaml
video/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
vocalize/: Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
(+194 files in other folders)
