[package]
name = "video"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
tokio = {version = "1.39.2", features = ["full"]}
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
sha1 = "0.10"
hex = "0.4"
actix-web = "4.10.2"
